docs: update swagger.json
