# libs/common/types/response.ts
@@ -4,6 +4,8 @@ export interface MessageResponse {
   message: string;
 }
 
+export type PendingResponse = MessageResponse & { operationId: string };
+
 export interface ValidationErrorResponse extends MessageResponse {
   details: ValidationErrorDetail[];
 }
